	PR c++/45307 	* gimplify.c (gimplify_init_constructor): Just return GS_UNHANDLED 	if ctor is empty. 	(gimplify_modify_expr_rhs): Adjust.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163380 138bc75d-0d04-0410-961f-82ee72b054a4